# Wallman

./: .Xresources  .bashrc  .gitignore  .gitmodules  .stow-local-ignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  readme.md  settings.gradle.kts
.cargo/: config.toml
.config/alacritty/: alacritty.yml  colorScheme.yml
.config/awesome/: rc.lua  theme.lua  utils.lua
.config/awesome/configs/: clientKeys.lua  clientbuttons.lua  keybinds.lua  rules.lua  screens.lua
.config/awesome/icons/: init.lua
.config/awesome/modules/: bar.lua  clock.lua  exit-screen.lua  (+4 more)
.config/conky/: .conkyrc  goals.conkyrc  timev2.conkyrc
.config/dunst/: dunstrc
.config/i3/: config  i3blocks.conf
.config/nvim/: init.vim
.config/picom/: config
.config/polybar/: config  config.ini  launch.sh  start.sh
.config/rofi/: bmenu.rasi  calc.rasi  colors.rasi  confirm.rasi  global.rasi  launcher.sh  launcherStyle.rasi  message.rasi  pmenucolors.rasi  powermenu.sh  row_square.rasi  style_12.rasi  wideInput.rasi
.doom.d/: config.el  init.el  packages.el
.emacs.d/: Emacs.org  init.el
doom/.doom.d/: config.el  init.el  packages.el
skripts/: commitAndPushConfig.sh  getPersonalGoals.sh  modifyPersonalGoals.sh  redditDownloadImage.sh
spaceship/.config/: spaceship.zsh
src/: cli.rs  commands.rs  env_config.rs  lib.rs  main.rs  metadata.rs  simple_file.rs  storage.rs  tag.rs
src/cli/: commands.rs  mod.rs  operation_handlers.rs
src/lib/: env_config.rs  metadata.rs  mod.rs  prompts.rs  reddit.rs  reddit_structs.rs  simple_file.rs  storage.rs  utils.rs
xresources/: .Xresources
(+335 files in other folders)
