[package]
name = "wallman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.3"
reqwest={version="0.11.11", features=["blocking"]}
home="0.5.3"
log = "0.4"
simple-log="1.6.0"
clap = "4.2.1"
csv = "1.2.1"
serde = {version = "1.0.159", features=["derive"]}
serde_json = "1.0.96"
open = "4.1.0"
uuid = {version =  "1.3.3", features=["v4"]}

[lib]
name = "wallman_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "wallman_bin"
path = "src/main.rs"

